filtro categorias bugged

--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -52,6 +52,10 @@
     padding: 0 !important;
 }
 
+#mui-component-select-category {
+    padding: 0 !important;
+}
+
 .filterPrice {
     display: flex;
     flex-direction: row !important;
