--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 
 main {
   flex: 1;
+  margin: 0 auto;
 }
 
 .btn-primary {
@@ -65,7 +66,7 @@ main {
 }
 
 .order-container {
-  max-width: 800px;
+  min-width: 1200px;
   margin-top: 8rem;
 }
 
