create form modificated, deleted create product view file that´s not used (only pushed to my branch, not merged yet)

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -7,9 +7,9 @@
     justify-content: center;
   }
   
-  body {
+  /* body {
     background-color: #8a8d91 !important;
-  }
+  } */
   
   /*slider.css  */
   .products-container {
