--- a/src/components/UpdateProduct/UpdateProduct.module.css
+++ b/src/components/UpdateProduct/UpdateProduct.module.css
@@ -1,7 +1,10 @@
-.container{
+
+
+
+ .container{
     margin-top: 5em;
 }
-
+/*
 .contenedor{
     background: rgb(219, 219, 219);
     margin-left: 30%;
@@ -17,8 +20,7 @@
     padding-bottom:2%;
     padding-left:10%;
     text-decoration:none;
-    /* width: 350px; */
-    /* margin: center */
+    
 }
 
 .volver1{
@@ -101,7 +103,7 @@ background-color: black;
 .categorias {
     background: #1122b8 100%;
     background-color:rgb(0, 38, 255);
-    /* border-radius:42px; */
+   
     display:inline-block;
     cursor:pointer;
     color:white;
@@ -119,7 +121,7 @@ background-color: black;
 .envio {
     background: #1122b8 100%;
     background-color:rgb(0, 38, 255);
-    /* border-radius:42px; */
+   
     display:inline-block;
     cursor:pointer;
     color:white;
@@ -137,8 +139,7 @@ background-color: black;
 
 .input {
     background: #ffffff 100%;
-    /* border-radius:42px; */
-    /* display:inline-block; */
+    
     cursor:pointer;
     color:black;
     font-family:Verdana;
@@ -151,8 +152,7 @@ background-color: black;
 }
 .inputDiscount {
     background: #ffffff 100%;
-    /* border-radius:42px; */
-    /* display:inline-block; */
+    
     cursor:pointer;
     color:black;
     font-family:Verdana;
@@ -162,4 +162,4 @@ background-color: black;
     padding: 3px 58px;
     text-decoration:none;
     
-}
+} */
