--- a/src/components/advertisements/ads.css
+++ b/src/components/advertisements/ads.css
@@ -1,8 +1,37 @@
-.adscontainer {
-    background: url('../../views/assets/publicidad.gif');
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 250px;
-    height: 700px;
-    margin-top: 100px;
-}
+.text {
+    font-size:28px;
+    font-family:helvetica;
+    font-weight:bold;
+    color:#139745;
+    text-transform:uppercase;
+  }
+  .parpadea {
+    
+    animation-name: parpadeo;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  
+    -webkit-animation-name:parpadeo;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+  }
+  
+  @-moz-keyframes parpadeo{  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+  }
+  
+  @-webkit-keyframes parpadeo {  
+    0% { opacity: 1.0; }
+    50% { opacity: 0.0; }
+     100% { opacity: 1.0; }
+  }
+  
+  @keyframes parpadeo {  
+    0% { opacity: 1.0; }
+     50% { opacity: 0.0; }
+    100% { opacity: 1.0; }
+  }
