--- a/src/index.css
+++ b/src/index.css
@@ -70,4 +70,22 @@ main {
   margin-top: 8rem;
 }
 
+.center {
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+}
+
+.button { 
+    display: flex;
+    align-items: center;
+    margin-left: 12px;
+    margin-right: 12px;
+}
+
+.search {
+  /* min-width: 350px; */
+  /* margin-right: 24px; */
+}
+
 
